--- a/styles.css
+++ b/styles.css
@@ -520,6 +520,7 @@ header nav ul li a {
     background: white;
     border-radius: 8px;
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    align-items: flex-start;
 }
 
 .info {
@@ -527,19 +528,12 @@ header nav ul li a {
     /* flex: 1; */
     padding-right: 20px;
     justify-content: left;
+    
 }
 .info p{
     font-size: 1rem;
     color: var(--escuro);
 }
-
-/* h2 {
-    color: #2c3e50;
-}
-
-h3 {
-    color: #2980b9;
-} */
 
 form {
     flex: 1;
