--- a/styles.css
+++ b/styles.css
@@ -274,7 +274,7 @@ header nav ul li a {
     /* overflow: hidden;  */
     padding: 0 ;
     /*border:  1px solid black; */
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 #section-video {
@@ -288,8 +288,19 @@ header nav ul li a {
     margin: 0;
 }
 
-.inicio-content {
-    display: flex;
+.inicio-content1 {
+    display: block;
+    /*flex-direction: column;*/
+    justify-content: center;
+    align-items: center;
+    z-index: 1;     
+    /*padding: 3rem;
+    margin: 0;
+    height: 100%;*/
+    width: 95vw;  
+}
+.inicio-content2{
+    display: block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -297,14 +308,20 @@ header nav ul li a {
     padding: 3rem;
     margin: 0;
     height: 100%;
-    width: 95vw;
-    
-    
+    width: 30vw;  
+
+}
+
+.banner-img{
+    display: flex;
+    padding: 5px ;
+    height: 200px ;
+    object-fit: cover;   
 }
 
 .inicio-content h1{
     line-height: 1.2;
-    color: var(--claro);
+    color: var(--escuro);
     font-size: 4rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     
