--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ header {
 }
 
 .logoimg{
-    display: flex;
+    display: none;
     padding: 5px ;
     height: 60px ;
     object-fit: cover;   
@@ -268,13 +268,13 @@ header nav ul li a {
     top: 10px;
     margin: 0;
     height:95vh;
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: center;
     /* overflow: hidden;  */
     padding: 0 ;
     /*border:  1px solid black; */
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.6);
 }
 
 #section-video {
@@ -289,13 +289,13 @@ header nav ul li a {
 }
 
 .inicio-content1 {
-    display: block;
+    display: flex;
     /*flex-direction: column;*/
     justify-content: center;
-    align-items: center;
+    align-items:center;
     z-index: 1;     
-    /*padding: 3rem;
-    margin: 0;
+    padding: 3rem;
+    /*margin: 0;
     height: 100%;*/
     width: 95vw;  
 }
@@ -308,18 +308,18 @@ header nav ul li a {
     padding: 3rem;
     margin: 0;
     height: 100%;
-    width: 30vw;  
+    width: 50vw;  
 
 }
 
 .banner-img{
     display: flex;
     padding: 5px ;
-    height: 200px ;
+    height: 250px ;
     object-fit: cover;   
 }
 
-.inicio-content h1{
+.inicio-content1 h1{
     line-height: 1.2;
     color: var(--escuro);
     font-size: 4rem;
@@ -327,8 +327,8 @@ header nav ul li a {
     
 }
 
-.inicio-content p {
-    color: var(--claro);
+.inicio-content2 p {
+    color: var(--escuro);
     font-size: 1.5rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     
