--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@
     --gap: 3rem;
     --font1: 'Rockford', Arial, sans-serif;
     --font2: 'Poppins', Arial, sans-serif;
+    --vh: 60vh
     
 }
 
@@ -199,7 +200,7 @@ header {
     width: 1200px;
     margin: 0 auto;
     justify-content: space-between;
-    border-bottom: 0.5px solid rgba(113, 196, 176, 0.4); 
+    /*border-bottom: 0.5px solid rgba(113, 196, 176, 0.4); */
     /*border: 1px solid black;*/
 
 }
@@ -267,22 +268,22 @@ header nav ul li a {
     /*position:static;*/
     top: 10px;
     margin: 0;
-    height:95vh;
+    height: var(--vh);
     display: block;
     align-items: center;
     justify-content: center;
     /* overflow: hidden;  */
     padding: 0 ;
-    /*border:  1px solid black; */
-    background-color: rgba(255, 255, 255, 0.6);
+    /*background-color: rgba(255, 255, 255, 0.6);*/
+    background-color: rgba(0,0,0, 0.5);
+        
 }
 
 #section-video {
     position: absolute;
-    
     left: 0;
     width: 100%;
-    height: 100%;
+    height:  var(--vh);
     object-fit: cover;
     z-index: -1; 
     margin: 0;
@@ -293,22 +294,22 @@ header nav ul li a {
     /*flex-direction: column;*/
     justify-content: center;
     align-items:center;
-    z-index: 1;     
-    padding: 3rem;
-    /*margin: 0;
-    height: 100%;*/
-    width: 95vw;  
+    z-index: 1;   
+    padding-top: 40px;  
+    margin: 0 5%;
+    max-width: 1450px;
+    /*border: solid 1px black;  */
 }
+
 .inicio-content2{
     display: block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 1;     
-    padding: 3rem;
-    margin: 0;
-    height: 100%;
+    margin: 30px 5%;
     width: 50vw;  
+    /*border: solid 1px red;*/
 
 }
 
@@ -320,19 +321,22 @@ header nav ul li a {
 }
 
 .inicio-content1 h1{
-    line-height: 1.2;
-    color: var(--escuro);
-    font-size: 4rem;
+    text-align: left;
+    color: var(--claro);
+    /*font-size: 3rem;*/
+    font-size:  3rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-left: 10px;
     
 }
 
 .inicio-content2 p {
-    color: var(--escuro);
-    font-size: 1.5rem;
+    color: var(--claro);
+    font-size: 1.2rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    
     text-align: justify;
+    margin: 0px;
+    padding: 0px;
 }
 
 .new-section {
@@ -342,6 +346,7 @@ header nav ul li a {
     padding: 0;
     margin: 0;
     height: 10vh;
+    /*border: solid 1px black;*/
     }
 
 /* SERVIÇOS */
