--- a/stylesresponsiv.css
+++ b/stylesresponsiv.css
@@ -219,6 +219,7 @@
         padding: 40px 0 0 0;  
         margin: 0 3%;
         border: solid 1px black;  
+        width: 95vw;  
     }
     
     .inicio-content2{
@@ -227,8 +228,8 @@
         justify-content: center;
         align-items: center;
         z-index: 1;     
-        margin: 30px 5%;
-        width: 50vw;  
+        margin: 0 3%;
+        width: 95vw;  
         /*border: solid 1px red;*/
     
     }
