--- a/styles.css
+++ b/styles.css
@@ -339,21 +339,11 @@ header nav ul li a {
     padding: 0px;
 }
 
-.new-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-    height: 10vh;
-    /*border: solid 1px black;*/
-    }
-
 /* SERVIÇOS */
 
 #servicos{
     margin-bottom: 30px;
-    display: flex;
+    display: block;
 }
 
 .width-100 {
@@ -367,14 +357,36 @@ header nav ul li a {
     position: relative; /* Para posicionar os botões corretamente */
 }
 
+.new-section {
+    display: block;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    height: 10vh;
+    box-sizing: border-box
+    /*border: solid 1px black;*/
+}
+
 .corpodasecao {
     display: flex;
-    overflow-x: hidden; /* Esconde a barra de rolagem */
-    scroll-behavior: smooth; /* Adiciona rolagem suave */
-    gap: 20px; /* Espaçamento entre as caixas */
+    overflow-x: auto; /* Permite rolagem horizontal */
+    scroll-behavior: smooth; /* Rolagem suave */
+    width: 100%;
+    padding: 10px 0;
+    margin: 0 5vw;
+    align-items: center;
+    justify-items: center;
+
+    /* display: flex;
+    overflow-x: hidden; 
+    scroll-behavior: smooth; 
+    gap: 20px; 
     padding: 10px;
-    width: 90%; /* Ajuste para deixar espaço para os botões */
-    margin: 0 auto;
+    width: 90%; 
+    margin: 0 auto; */
+    
 }
 
 .scroll-button {
@@ -414,10 +426,9 @@ header nav ul li a {
     margin: 5px;
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(207, 207, 207, 0.5);
-    min-width: 300px;
-    max-width: 360px;
+    width: 360px;
     background-color: white;
-    min-height: 420px;
+    height: 450px;
 }
 
 .h2serv {
@@ -439,9 +450,10 @@ header nav ul li a {
 }
 
 .img-serv {
-    max-width: 100%;
-    height: 200px;
-    border-radius: 20px 20px 0px 0px;
+    width: 100%;
+    
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
 }
 
 .h3serv {
@@ -662,7 +674,7 @@ footer p {
 }
 
 .footer-bottom p {
-    font-size: 0.7rem;
+    font-size: 0.9em;
     color: var(--claro);
 }
 .footer-bottom a {
