--- a/styles.css
+++ b/styles.css
@@ -365,7 +365,10 @@ header nav ul li a {
     padding: 0;
     margin: 0;
     height: 10vh;
-    box-sizing: border-box
+    box-sizing: border-box;
+    /* background: url('img/backgroundprovisorio.png') no-repeat center center fixed, 
+    linear-gradient(130deg,  var(--primary-lilasclaro) 5%, var(--primary-azul) 50%, var(--secundary-verde) 95%);;
+    background-size: cover; */
     /*border: solid 1px black;*/
 }
 
