--- a/styles.css
+++ b/styles.css
@@ -274,8 +274,8 @@ header nav ul li a {
     justify-content: center;
     /* overflow: hidden;  */
     padding: 0 ;
-    /*background-color: rgba(255, 255, 255, 0.6);*/
-    background-color: rgba(0,0,0, 0.5);
+     background-color: rgba(255, 255, 255, 0.4); 
+    /* background-color: rgba(0,0,0, 0.5); */
         
 }
 
@@ -289,6 +289,20 @@ header nav ul li a {
     margin: 0;
 }
 
+.inicio-container{
+    
+    justify-content: center;
+    align-items: center;
+    z-index: 1;   
+    height: 100%;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    
+    
+    max-width: 100vw
+    /*border: solid 1px black;  */
+}
 .inicio-content1 {
     display: flex;
     /*flex-direction: column;*/
@@ -297,7 +311,7 @@ header nav ul li a {
     z-index: 1;   
     padding-top: 40px;  
     margin: 0 5%;
-    max-width: 1450px;
+    max-width: 100vw
     /*border: solid 1px black;  */
 }
 
@@ -307,8 +321,8 @@ header nav ul li a {
     justify-content: center;
     align-items: center;
     z-index: 1;     
-    margin: 30px 5%;
-    width: 50vw;  
+    margin: 20px 5%;
+    width: 85vw;  
     /*border: solid 1px red;*/
 
 }
@@ -316,27 +330,175 @@ header nav ul li a {
 .banner-img{
     display: flex;
     padding: 5px ;
-    height: 250px ;
+    height: 200px ;
     object-fit: cover;   
 }
 
 .inicio-content1 h1{
-    text-align: left;
-    color: var(--claro);
+    text-align: justify;
+
+    color: var(--escuro);
     /*font-size: 3rem;*/
     font-size:  3rem;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); */
     margin-left: 10px;
     
 }
 
 .inicio-content2 p {
-    color: var(--claro);
+    color: var(--escuro);
     font-size: 1.2rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-align: justify;
     margin: 0px;
     padding: 0px;
+}
+
+/*                         SOBRE                             */
+#sobre{
+    margin-bottom: 30px;
+
+}
+
+.sobre1-container1{
+    display:flex;
+    justify-content: auto; 
+    margin: 0 auto;
+    padding: 5px;
+    max-width: 100vw;
+    flex-wrap: wrap;    
+    
+}
+
+.sobre-texto1{
+    flex: 2fr;
+    align-items: left;
+    margin: 5px;    
+    
+    max-width: 100vw;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+   /*  display: flex;
+    justify-content: auto; 
+    flex-wrap: wrap;
+    max-width: 100vw;
+    margin: auto;
+    padding: 10px; */
+}
+
+.sobre-texto1 p{
+    width: 45vw;
+
+}
+
+.sobre-img1{
+    display: flex;
+    width: 45vw;
+    height: auto;
+    margin: 0 auto;
+    padding: 0;
+    object-fit: cover;
+    max-height: 45vh;
+
+
+}
+
+.sobre1-container2 {
+    display: flex;
+    justify-content: auto; 
+    margin: 10px auto;
+    padding: 5px;
+    max-width: 100vw;
+    flex-wrap: wrap;    
+    justify-content: center; 
+    /* 
+    
+    max-width: 1200px;
+    margin: 10px auto; */
+}
+
+
+
+#sobre h3{
+    margin: 10px auto;
+    
+}
+
+.caixa-texto{
+    display: flex;
+    justify-content: auto; 
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: auto;
+    padding: 10px;
+
+}
+
+.sobre-container {
+    display: flex;
+    justify-content: auto; 
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+    
+    justify-content: center; 
+    /* 
+    max-width: 1200px;
+    margin: 10px auto; */
+}
+
+.sobre-caixa {
+    flex: 3fr;
+    align-items: center;
+    margin: 5px;    
+    min-width: 300px;
+    max-width: 380px;
+    background-color: white;
+    min-height: 200px;
+    padding: 0;
+}
+
+.sobre-caixa p{
+    padding: 0 1rem;
+    list-style: none;
+    font-size: 0.9rem;
+    text-align:left;
+    margin-bottom: 1rem;
+}
+
+.sobre-caixa h3{
+    padding: 0 1rem;
+    list-style: none;
+    font-size: 1rem;
+    text-align:left;
+    
+}
+.sobre-caixa h4{
+    padding: 0 5px;
+    list-style: none;
+    font-size: 1rem;
+    text-align:left;
+    color: var(--escuro);
+
+    
+}
+.span-h4{
+    display: flex;
+    align-items: center;
+    justify-content:left;
+    padding: 0;
+    margin: 0;
+    padding-left: 10px;
+}
+
+.icon-imgh4{
+    display: flex;
+    height: 1rem;
+    margin: 0;
+    padding: 0;
+    
 }
 
 /* SERVIÇOS */
@@ -477,52 +639,6 @@ header nav ul li a {
 }
 
 
-
-
-/*                         SOBRE                             */
-#sobre{
-    margin-bottom: 30px;
-
-}
-
-.sobre-container {
-    display: flex;
-    justify-content: auto; 
-    flex-wrap: wrap;
-    max-width: 1200px;
-    margin: 0 auto;
-    /* display: flex;
-    justify-content: auto; 
-    
-    max-width: 1200px;
-    margin: 10px auto; */
-}
-
-.sobre-caixa {
-    flex: 3fr;
-    align-items: center;
-    margin: 10px;    
-    min-width: 300px;
-    max-width: 380px;
-    background-color: white;
-    min-height: 200px;
-}
-
-.sobre-caixa p{
-    padding: 0 1rem;
-    list-style: none;
-    font-size: 0.9rem;
-    text-align:left;
-    margin-bottom: 1rem;
-}
-
-.sobre-caixa h3{
-    padding: 0 1rem;
-    list-style: none;
-    font-size: 1rem;
-    text-align:left;
-    
-}
 
 /*Chamada de ação*/
 .acao {
