--- a/stylesresponsiv.css
+++ b/stylesresponsiv.css
@@ -75,6 +75,25 @@
         font-size: 1rem; /* Reduz o tamanho do texto */
     }
 
+    .sobre-texto1{
+        display: block;
+        margin: 10px 0 0 0;
+        justify-items: center;
+        align-items: center;
+        width: 100%;
+        padding-bottom: 0;
+
+    }
+
+    .sobre-texto1 p{
+        width:  90vw;
+
+    }
+    .sobre-img1{
+        width: 100vw;
+    }
+
+
     /* Ajustes na seção de serviços */
     .corpodasecao {
         gap: 10px; /* Reduz o espaçamento entre as caixas */
