--- a/stylesresponsiv.css
+++ b/stylesresponsiv.css
@@ -1,7 +1,5 @@
 @media only screen and (max-width: 1000px) {
-    .banner-img{
-        height: 200px ;
-    }
+  
 
     .inicio-content1{
         margin: 0 5%;       
@@ -20,61 +18,97 @@
 
 
 @media only screen and (max-width: 768px) {
-    /* Ajustes gerais */
+    
     body {
-        font-size: 14px; /* Reduz o tamanho da fonte para melhorar a legibilidade */
+        font-size: 14px;
     }
 
     h1 {
-        font-size: 2rem; /* Reduz o tamanho do título principal */
+        font-size: 1.6rem;
     }
 
     h2 {
-        font-size: 1.8rem; /* Reduz o tamanho dos subtítulos */
+        font-size: 1.8rem; 
     }
 
     h3 {
-        font-size: 1.2rem; /* Reduz o tamanho dos títulos menores */
+        font-size: 1.2rem; 
     }
 
     p {
-        font-size: 0.9rem; /* Reduz o tamanho dos parágrafos */
+        font-size: 0.9rem; 
     }
 
     /* Ajustes no header */
-    .header-content {
-        padding: 0 10px; /* Reduz o padding do header */
+     /* Ajustes no header */
+     .header-fixed {
+        display: flex;
+        position: fixed;
+        align-items: center;
+        margin: 0 auto;
+        width: 100%;
+        height: 70px;
+        padding: 0;
+        z-index: 20;
+        margin: 0;
+        /*margin: solid 1px black;*/
+        /*background-color: var(--claro);*/
+        background: linear-gradient(130deg,  var(--primary-lilasclaro) 5%, var(--primary-azul) 50%, var(--secundary-verde) 95%);
+    }
+        
+    
+    
+    .header-content{
+        display: flex;
+        width: 100%;
+        margin: 0 auto;
+        justify-content: space-between;
+        /*border-bottom: 0.5px solid rgba(113, 196, 176, 0.4); */
+        
+    
+    }
+    
+    .logoimg{
+        display: flex;
+        padding: 5px ;
+        height: 60px ;
+        object-fit: cover;
+        content: url('img/logo-white.png');
     }
 
-    .logoimg {
-        height: 50px; /* Reduz o tamanho do logo */
+    #contatosTop {
+        display: none;
     }
 
-    #openMenu {
-        font-size: 24px; /* Ajusta o tamanho do ícone do menu */
-    }
 
     /* Ajustes na seção de início */
     .inicio {
-        height: 70vh; /* Reduz a altura da seção inicial */
+        height: 50vh; 
     }
 
     .inicio-content1 {
-        padding: 1rem; /* Reduz o padding */
+        padding: 1rem; 
+        padding-top:  60px;
     }
 
     .inicio-content1 h1 {
-        font-size: 2rem; /* Reduz o tamanho do título */
+        font-size: 1.6rem;
     }
 
     .inicio-content2 {
-        width: 80%; /* Ajusta a largura do conteúdo */
+        width: 80%; 
     }
 
     .inicio-content2 p {
-        font-size: 1rem; /* Reduz o tamanho do texto */
+        font-size: 1rem; 
     }
 
+    .banner-img{
+        height: auto;
+        width: 25vw;
+    }
+
+     /* Ajustes na sobre */
     .sobre-texto1{
         display: block;
         margin: 10px 0 0 0;
@@ -168,7 +202,7 @@
 
 
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 580px) {
     /* Ajustes no header */
     .header-fixed {
         display: flex;
@@ -181,8 +215,8 @@
         z-index: 20;
         margin: 0;
         /*margin: solid 1px black;*/
-        /*background-color: var(--claro);*/
-        background: linear-gradient(130deg,  var(--primary-lilasclaro) 5%, var(--primary-azul) 50%, var(--secundary-verde) 95%);
+        background-color: var(--claro);
+        /* background: linear-gradient(130deg,  var(--primary-lilasclaro) 5%, var(--primary-azul) 50%, var(--secundary-verde) 95%); */
     }
         
     
@@ -210,7 +244,21 @@
     /* Ajustes na seção de início */
       
 
-    #inicio {       
+    .inicio { 
+        /*position:static;*/
+        top: 10px;
+        margin: 0;
+        height: var(--vh);
+        display: block;
+        align-items: center;
+        justify-content: center;
+        /* overflow: hidden;  */
+        padding: 0 ;
+        background-color: rgba(255, 255, 255, 0.8); 
+        
+
+        
+        /* 
         display: flex;
         align-items: center;
         justify-content: center;
@@ -222,32 +270,31 @@
         display: block;
         align-items: center;
         justify-content: center;
-        background-color: rgb(255, 255, 255, 0.3);
+        background-color: rgb(255, 255, 255, 0.3); */
         
     }
     #section-video {
-        height: 90vh;
-    }
+        margin-top: 70px;
+        height: var(--vh);
+        
+     }
 
     .inicio-content1 {
         display: flex;
         justify-content: center;
-        align-items:center;
-        z-index: 1;   
-        padding: 40px 0 0 0;  
-        margin: 0 3%;
-        border: solid 1px black;  
-        width: 95vw;  
+        align-items:center;  
+        padding: 60px 0 0 0;  
+        margin: 0 5%;
+        
+        /* border: solid 1px black;   */
+        
     }
     
     .inicio-content2{
         display: block;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
-        z-index: 1;     
-        margin: 0 3%;
-        width: 95vw;  
+        margin: 0 5%;       
         /*border: solid 1px red;*/
     
     }
