--- a/styles.css
+++ b/styles.css
@@ -274,7 +274,7 @@ header nav ul li a {
     justify-content: center;
     /* overflow: hidden;  */
     padding: 0 ;
-     background-color: rgba(255, 255, 255, 0.6); 
+     background-color: rgba(255, 255, 255, 0.5); 
     /* background-color: rgba(0,0,0, 0.5); */
         
 }
@@ -303,13 +303,14 @@ header nav ul li a {
     max-width: 100vw
     /*border: solid 1px black;  */
 }
+
 .inicio-content1 {
     display: flex;
     /*flex-direction: column;*/
     justify-content: center;
     align-items:center;
     z-index: 1;   
-    padding-top: 40px;  
+    padding-top: 6vh;  
     margin: 0 5%;
     max-width: 100vw
     /*border: solid 1px black;  */
@@ -322,7 +323,7 @@ header nav ul li a {
     align-items: center;
     z-index: 1;     
     margin: 20px 5%;
-    width: 85vw;  
+    max-width: 100vw;  
     /*border: solid 1px red;*/
 
 }
@@ -588,22 +589,23 @@ header nav ul li a {
 }
 
 .corpodasecao {
-    display: flex;
-    overflow-x: auto; /* Permite rolagem horizontal */
-    scroll-behavior: smooth; /* Rolagem suave */
+    /* display: flex;
+    overflow-x: auto; /
+    scroll-behavior: smooth; 
     width: 100%;
     padding: 10px 0;
     margin: 0 5vw;
     align-items: center;
     justify-items: center;
-
-    /* display: flex;
-    overflow-x: hidden; 
-    scroll-behavior: smooth; 
-    gap: 20px; 
+ */
+    display: flex;
+    flex-wrap: wrap;
+    align-items:center;
+    
+    gap: 10px; 
     padding: 10px;
     width: 90%; 
-    margin: 0 auto; */
+    margin: 0 auto; 
     
 }
 
