--- a/styles.css
+++ b/styles.css
@@ -785,8 +785,8 @@ footer {
 
 .footer-container {
     display: flex;
-    /* justify-content: space-around;
-    align-items: flex-start; */
+    justify-content: space-around;
+    align-items: flex-start;
     
 }
 
