--- a/styles.css
+++ b/styles.css
@@ -602,7 +602,7 @@ header nav ul li a {
     display: flex;
     flex-wrap: wrap;
     align-items:center;
-    
+    justify-items: center;
     gap: 10px; 
      padding: 20px; 
     width: 100%; 
