--- a/stylesresponsiv.css
+++ b/stylesresponsiv.css
@@ -74,7 +74,7 @@
         padding: 5px ;
         height: 60px ;
         object-fit: cover;
-        content: url('img/logo-white.png');
+        content: url('img/logo-roxo.png');
     }
 
     #menu a {
@@ -246,7 +246,7 @@
         padding: 5px ;
         height: 60px ;
         object-fit: cover;
-        content: url('img/logo-white.png');
+        content: url('img/logo-roxo.png');
     }
     
     
